--- a/style.css
+++ b/style.css
@@ -190,6 +190,38 @@ input[type=number] {
 #add-data{margin: 3% 0 0 7%;}
 
 /*--------------------------------------------------------------------------------*/
+/*This designs the confirm and error window*/
+
+#alert-box, #error-box{
+	display: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+#alert, #error {
+	margin: 30vh auto;
+	width: 15em;
+	height: 15em;
+	background-color: #fff8bf;
+	box-shadow: 0 0 2em #fff8bf;
+	text-align: center;
+}
+
+#alert p, #error p {
+	font-size: 1.5em;
+	padding: 1em;
+}
+
+#alert button, #error button {
+	padding: .5em;
+	margin: .3em;
+	font-size: 1.5em;
+}
+
+/*--------------------------------------------------------------------------------*/
 /*Media Queries*/
 
 @media all and (max-width: 53em){
